--- a/grid.css
+++ b/grid.css
@@ -22,6 +22,11 @@
   
   .heading {
     grid-area: heading;
+    font-size:larger;
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align:center;
+    background-color: #004477;
     }
   .footbar {
     grid-area: footbar;
